# sophgo-hal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test-and-format.yml
examples/blinky/: Cargo.toml  README.md  build.rs
examples/blinky/src/: main.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: main.rs
sophgo-hal/: Cargo.toml
sophgo-hal/src/: gpio.rs  lib.rs  pad.rs  uart.rs
sophgo-rom-rt/: Cargo.toml  build.rs
sophgo-rom-rt/macros/: Cargo.toml
sophgo-rom-rt/macros/src/: lib.rs
sophgo-rom-rt/src/: lib.rs  macros.rs
sophgo-rom-tool/: Cargo.toml  README.md
sophgo-rom-tool/src/: lib.rs  main.rs
sophgo-rom-tool/tests/: check-test.rs  process-test.rs
