[package]
name = "sophgo-hal"
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile-register = "0.2.1"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"

[dev-dependencies]
memoffset = "0.9.0"
