[package]
name = "blinky"
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophgo-rom-rt = { version = "0.0.0", path = "../../sophgo-rom-rt" }
sophgo-hal = { version = "0.0.0", path = "../../sophgo-hal" }
panic-halt = "0.2.0"
riscv = "0.11.0"
embedded-hal = "1.0.0"

[[bin]]
name = "blinky"
test = false
bench = false
