[package]
name = "sophgo-rom-rt-macros"
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0.15"
features = ["extra-traits", "full"]

[lib]
proc-macro = true
